2015.03.29 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* autogen.sh:
	  - mkdir m4 directory if it does not exist. (picking ecf124c6)

2014.08.18 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* configure.ac:
	  - Added new option "--enable-asan" that enables AddressSanitizer.

2014.08.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Version number check improved for Micro QR Code.

2014.08.05 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* configure.ac, Makefile.am, tests/Makefile.am:
	  - Added some conditional flags for configuration/building process.
	  - HAVE_PNG and HAVE_SDL can be refered from both Makefile and program
	    code.
	* tests/view_qrcode.c:
	  - Use SDL_WaitEvent() instead of SDL_PollEvent().
	* tests/common.h:
	  - Added show_QRcode() for testing purposes. (Thanks to Sunil Maganally)
	* tests/*.c:
	  - main()'s arguments now correctly declared.

2014.07.25 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/URI_testset.inc, tests/test_split_urls.c, tests/Makefile.am,
	  .gitignore:
	  - A new test suite evaluating splitting efficiency has been added.
	  - Still undertrial.

2014.07.24 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Code refactoring (QRinput_Struct_count has been added).
	  - And more code cleanups.
	  - Avoid to add a Structued-append chunk when only one symbol is
	    generated.
	* tests/test_qrinput.c:
	  - New test has been added.
	* qrinput.c, qrencode.1.in:
	  - Added new option, "verbose".
	* tests/common.h:
	  - printQRinputStruct() has been added.
	[3.4]
	  - Bumped verstion to 3.4.4.
	* Version 3.4.4 has been released.

2014.06.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrencode.1.in:
	  - Merged pull-request #44. (Thanks to Antenore)
	  - Fixed some format issues.

2013.07.29 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.4]
	* configure.ac, README, NEWS: 
	  - Bumped version to 3.4.3.

2013.07.16 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - missing break in switch. (Thanks to ßlúèÇhîp)